--- a/Dominio.Entidades/Dominio.Entidades.csproj
+++ b/Dominio.Entidades/Dominio.Entidades.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CantidadEntity.cs" />
+    <Compile Include="CarritoDetalle.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="DetalleUsuarioEntity.cs" />
     <Compile Include="DIdiomaEntity.cs" />
